tests/runner/src/snapshots/tlang_test_runner__tests__functions_mandelbrot_mandelbrot_javascript@functions__mandelbrot__mandelbrot.tlang.snap
---
source: tests/runner/src/main.rs
description: "Backend: javascript"
expression: "apply_redactions(&output, workspace_root)"
input_file: tests/functions/mandelbrot/mandelbrot.tlang
---
[stdin]:107
    return method.call(impl, self, ...args);
                  ^

TypeError: Cannot read properties of null (reading 'call')
    at #call ([stdin]:107:19)
    at $Protocol.into ([stdin]:67:41)
    at [stdin]:754:28
    at [stdin]:284:28
    at Array.map (<anonymous>)
    at Object.map ([stdin]:284:17)
    at #call ([stdin]:107:19)
    at [stdin]:67:41
    at render_row ([stdin]:753:12)
    at render_row_sum ([stdin]:760:18)

Node.js v24.0.2
